--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Youtube Subscription filter Options</title>
+  <title>CryptoKitties Subscription filter Options</title>
   <style>
     body { 
       padding: 10px; 
