--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Youtube subscription filter</title>
+    <title>CryptoKitties subscription filter</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
